2010-06-26  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_flash): restore clipping

	* avatar.c (avt_pager): handle clipping

2010-06-22  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c: renamed back from lua/lua-akfavatar.c

	* configure: experimental support for "--host=mingw"
	Makefile.in: adapted

2010-06-21  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_initialize_audio, avt_quit_audio):
	make it save to call it repeatedly

	* avatar.c (avt_quit):
	make it save to call it repeatedly

2010-06-18  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c: path can be entered manually

2009-12-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (is_textfile, is_demo_or_text, is_graphic_file):
	better way to check for extension

2009-12-09  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar.c: renamed from lua/lua-avt.c

2009-12-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_character): ignorable characters

2009-11-24  Andreas K. Foerster  <info@akfoerster.de>

	* colorchooser.c (avta_color_selection): optimized

	* avatar-audio.c (avt_initialize_audio):
	read alert sound from sound data with header

2009-11-22  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/multiply.pas: include sounds
	pascal/negative.inc, pascal/positive.inc: new files

2009-11-20  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/multiply.pas: include image of teacher
	pascal/teacher.inc: new file

2009-11-10  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c, lua/akfavatar-lua.c: new files
	(further developement not documented until first release)

------------------------------------------------------------------------

2009-11-08  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.18.0 released

	* akfavatar.h (avt_bool_t): unsigned char

2009-11-07  Andreas K. Foerster  <info@akfoerster.de>

	* example.c: updated and more comments
